Fix remaining Rubocop raised offenses
Enable the $LAST_READ_LINE global variable as an exception, the rest
apply the awaited practice.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -17,10 +17,15 @@ Style/StringLiteralsInInterpolation:
 Layout/LineLength:
   Max: 120
 
+Style/GlobalVars:
+  AllowedVariables:
+    - $LAST_PUT_LINE
+
 Style/OptionalBooleanParameter:
   AllowedMethods:
     - consent?
     - dissent?
+
 Metrics/BlockLength:
   Exclude:
     - '*.gemspec'
