--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,9 @@ Style/StringLiteralsInInterpolation:
 Layout/LineLength:
   Max: 120
 
+Lint/EmptyClass:
+  AllowComments: true
+
 Style/GlobalVars:
   AllowedVariables:
     - $LAST_PUT_LINE
